added mixed maple forest and snowy forests

--- a/src/main/resources/assets/treemendous/lang/en_us.json
+++ b/src/main/resources/assets/treemendous/lang/en_us.json
@@ -1,4 +1,36 @@
 {
+  "biome.treemendous.brown_maple_forest": "Brown Maple Forest",
+  "biome.treemendous.brown_maple_forest_hills": "Brown Maple Hills",
+  "biome.treemendous.brown_maple_forest_hills_snow": "Snowy Brown Maple Hills",
+  "biome.treemendous.brown_maple_forest_snow": "Snowy Brown Maple Forest",
+  "biome.treemendous.douglas_forest": "Douglas Fir Forest",
+  "biome.treemendous.douglas_forest_hills": "Douglas Fir Hills",
+  "biome.treemendous.douglas_forest_hills_snow": "Snowy Douglas Fir Hills",
+  "biome.treemendous.douglas_forest_snow": "Snowy Douglas Fir Forest",
+  "biome.treemendous.fir_forest": "Fir Forest",
+  "biome.treemendous.fir_forest_hills": "Fir Hills",
+  "biome.treemendous.fir_forest_hills_snow": "Snowy Fir Hills",
+  "biome.treemendous.fir_forest_snow": "Snowy Fir Forest",
+  "biome.treemendous.japanese_forest": "Japanese Maple Forest",
+  "biome.treemendous.japanese_forest_hills": "Japanese Maple Hills",
+  "biome.treemendous.japanese_forest_hills_snow": "Snowy Japanese Maple Hills",
+  "biome.treemendous.japanese_forest_snow": "Snowy Japanese Maple Forest",
+  "biome.treemendous.larch_forest": "Larch Forest",
+  "biome.treemendous.larch_forest_hills": "Larch Hills",
+  "biome.treemendous.larch_forest_hills_snow": "Snowy Larch Hills",
+  "biome.treemendous.larch_forest_snow": "Snowy Larch Forest",
+  "biome.treemendous.maple_forest": "Maple Forest",
+  "biome.treemendous.maple_forest_hills": "Maple Hills",
+  "biome.treemendous.maple_forest_hills_snow": "Snowy Maple Hills",
+  "biome.treemendous.maple_forest_snow": "Snowy Maple Forest",
+  "biome.treemendous.pine_forest": "Pine Forest",
+  "biome.treemendous.pine_forest_hills": "Pine Hills",
+  "biome.treemendous.pine_forest_hills_snow": "Snowy Pine Hills",
+  "biome.treemendous.pine_forest_snow": "Snowy Pine Forest",
+  "biome.treemendous.red_maple_forest": "Red Maple Forest",
+  "biome.treemendous.red_maple_forest_hills": "Red Maple Hills",
+  "biome.treemendous.red_maple_forest_hills_snow": "Snowy Red Maple Hills",
+  "biome.treemendous.red_maple_forest_snow": "Snowy Red Maple Forest",
   "block.treemendous.brown_maple_leaves": "Brown Maple Leaves",
   "block.treemendous.brown_maple_sapling": "Brown Maple Sapling",
   "block.treemendous.douglas_button": "Douglas Fir Button",
@@ -105,21 +137,5 @@
   "item.treemendous.japanese_boat": "Japanese Maple Boat",
   "item.treemendous.larch_boat": "Larch Boat",
   "item.treemendous.maple_boat": "Maple Boat",
-  "item.treemendous.pine_boat": "Pine Boat",
-  "treemendous:brown_maple_forest": "Brown Maple Forest",
-  "treemendous:brown_maple_forest_hill": "Brown Maple Forest Hills",
-  "treemendous:douglas_forest": "Douglas Fir Forest",
-  "treemendous:douglas_forest_hill": "Douglas Fir Forest Hills",
-  "treemendous:fir_forest": "Fir Forest",
-  "treemendous:fir_forest_hill": "Fir Forest Hills",
-  "treemendous:japanese_forest": "Japanese Maple Forest",
-  "treemendous:japanese_forest_hill": "Japanese Maple Forest Hills",
-  "treemendous:larch_forest": "Larch Forest",
-  "treemendous:larch_forest_hill": "Larch Forest Hills",
-  "treemendous:maple_forest": "Maple Forest",
-  "treemendous:maple_forest_hill": "Maple Forest Hills",
-  "treemendous:pine_forest": "Pine Forest",
-  "treemendous:pine_forest_hill": "Pine Forest Hills",
-  "treemendous:red_maple_forest": "Red Maple Forest",
-  "treemendous:red_maple_forest_hill": "Red Maple Forest Hills"
+  "item.treemendous.pine_boat": "Pine Boat"
 }
