--- a/src/main/resources/assets/treemendous/lang/en_us.json
+++ b/src/main/resources/assets/treemendous/lang/en_us.json
@@ -340,12 +340,16 @@
   "item.treemendous.beech_boat": "Beech Boat",
   "item.treemendous.cherry_boat": "Cherry Boat",
   "item.treemendous.chestnut_boat": "Chestnut Boat",
+  "item.treemendous.diamond_lumber_axe": "Diamond Lumberaxe",
   "item.treemendous.douglas_boat": "Douglas Fir Boat",
   "item.treemendous.fir_boat": "Fir Boat",
+  "item.treemendous.golden_lumber_axe": "Golden Lumberaxe",
+  "item.treemendous.iron_lumber_axe": "Iron Lumberaxe",
   "item.treemendous.japanese_boat": "Japanese Maple Boat",
   "item.treemendous.larch_boat": "Larch Boat",
   "item.treemendous.linden_boat": "Linden Boat",
   "item.treemendous.maple_boat": "Maple Boat",
+  "item.treemendous.netherite_lumber_axe": "Netherite Lumberaxe",
   "item.treemendous.pine_boat": "Pine Boat",
   "item.treemendous.plane_boat": "Plane Boat",
   "item.treemendous.pomegranate_boat": "Pomegranate Boat",
