added needle forests

--- a/src/main/resources/assets/treemendous/lang/en_us.json
+++ b/src/main/resources/assets/treemendous/lang/en_us.json
@@ -50,6 +50,8 @@
   "biome.treemendous.mixed_forest": "Treemendous Mixed Forest",
   "biome.treemendous.mixed_forest_vanilla": "Mixed Forest",
   "biome.treemendous.mixed_maple_forest": "Mixed Maple Forest",
+  "biome.treemendous.needle_forest": "Needle Forest",
+  "biome.treemendous.needle_forest_snow": "Snowy Needle Forest",
   "biome.treemendous.pine_forest": "Pine Forest",
   "biome.treemendous.pine_forest_hills": "Pine Hills",
   "biome.treemendous.pine_forest_hills_snow": "Snowy Pine Hills",
