--- a/src/main/resources/assets/treemendous/lang/en_us.json
+++ b/src/main/resources/assets/treemendous/lang/en_us.json
@@ -15,6 +15,10 @@
   "biome.treemendous.brown_maple_forest_hills": "Brown Maple Hills",
   "biome.treemendous.brown_maple_forest_hills_snow": "Snowy Brown Maple Hills",
   "biome.treemendous.brown_maple_forest_snow": "Snowy Brown Maple Forest",
+  "biome.treemendous.cedar_forest": "Cedar Forest",
+  "biome.treemendous.cedar_forest_hills": "Cedar Hills",
+  "biome.treemendous.cedar_forest_hills_snow": "Snowy Cedar Hills",
+  "biome.treemendous.cedar_forest_snow": "Snowy Cedar Forest",
   "biome.treemendous.cherry_forest": "Cherry Forest",
   "biome.treemendous.cherry_forest_hills": "Cherry Hills",
   "biome.treemendous.cherry_forest_hills_snow": "Snowy Cherry Hills",
@@ -43,6 +47,10 @@
   "biome.treemendous.linden_forest_hills": "Linden Hills",
   "biome.treemendous.linden_forest_hills_snow": "Snowy Linden Hills",
   "biome.treemendous.linden_forest_snow": "Snowy Linden Forest",
+  "biome.treemendous.magnolia_forest": "Magnolia Forest",
+  "biome.treemendous.magnolia_forest_hills": "Magnolia Hills",
+  "biome.treemendous.magnolia_forest_hills_snow": "Snowy Magnolia Hills",
+  "biome.treemendous.magnolia_forest_snow": "Snowy Magnolia Forest",
   "biome.treemendous.maple_forest": "Maple Forest",
   "biome.treemendous.maple_forest_hills": "Maple Hills",
   "biome.treemendous.maple_forest_hills_snow": "Snowy Maple Hills",
@@ -72,6 +80,10 @@
   "biome.treemendous.robinia_forest_hills": "Robinia Hills",
   "biome.treemendous.robinia_forest_hills_snow": "Snowy Robinia Hills",
   "biome.treemendous.robinia_forest_snow": "Snowy Robinia Forest",
+  "biome.treemendous.walnut_forest": "Walnut Forest",
+  "biome.treemendous.walnut_forest_hills": "Walnut Hills",
+  "biome.treemendous.walnut_forest_hills_snow": "Snowy Walnut Hills",
+  "biome.treemendous.walnut_forest_snow": "Snowy Walnut Forest",
   "biome.treemendous.willow_forest": "Willow Forest",
   "biome.treemendous.willow_forest_hills": "Willow Hills",
   "biome.treemendous.willow_forest_hills_snow": "Snowy Willow Hills",
@@ -120,6 +132,20 @@
   "block.treemendous.beech_wood": "Beech Wood",
   "block.treemendous.brown_maple_leaves": "Brown Maple Leaves",
   "block.treemendous.brown_maple_sapling": "Brown Maple Sapling",
+  "block.treemendous.cedar_button": "Cedar Button",
+  "block.treemendous.cedar_door": "Cedar Door",
+  "block.treemendous.cedar_fence": "Cedar Fence",
+  "block.treemendous.cedar_fence_gate": "Cedar Fence Gate",
+  "block.treemendous.cedar_leaves": "Cedar Leaves",
+  "block.treemendous.cedar_log": "Cedar Log",
+  "block.treemendous.cedar_planks": "Cedar Planks",
+  "block.treemendous.cedar_pressure_plate": "Cedar Pressure Plate",
+  "block.treemendous.cedar_sapling": "Cedar Sapling",
+  "block.treemendous.cedar_sign": "Cedar Sign",
+  "block.treemendous.cedar_slab": "Cedar Slab",
+  "block.treemendous.cedar_stairs": "Cedar Stairs",
+  "block.treemendous.cedar_trapdoor": "Cedar Trapdoor",
+  "block.treemendous.cedar_wood": "Cedar Wood",
   "block.treemendous.cherry_button": "Cherry Button",
   "block.treemendous.cherry_door": "Cherry Door",
   "block.treemendous.cherry_fence": "Cherry Fence",
@@ -218,6 +244,20 @@
   "block.treemendous.linden_stairs": "Linden Stairs",
   "block.treemendous.linden_trapdoor": "Linden Trapdoor",
   "block.treemendous.linden_wood": "Linden Wood",
+  "block.treemendous.magnolia_button": "Magnolia Button",
+  "block.treemendous.magnolia_door": "Magnolia Door",
+  "block.treemendous.magnolia_fence": "Magnolia Fence",
+  "block.treemendous.magnolia_fence_gate": "Magnolia Fence Gate",
+  "block.treemendous.magnolia_leaves": "Magnolia Leaves",
+  "block.treemendous.magnolia_log": "Magnolia Log",
+  "block.treemendous.magnolia_planks": "Magnolia Planks",
+  "block.treemendous.magnolia_pressure_plate": "Magnolia Pressure Plate",
+  "block.treemendous.magnolia_sapling": "Magnolia Sapling",
+  "block.treemendous.magnolia_sign": "Magnolia Sign",
+  "block.treemendous.magnolia_slab": "Magnolia Slab",
+  "block.treemendous.magnolia_stairs": "Magnolia Stairs",
+  "block.treemendous.magnolia_trapdoor": "Magnolia Trapdoor",
+  "block.treemendous.magnolia_wood": "Magnolia Wood",
   "block.treemendous.maple_button": "Maple Button",
   "block.treemendous.maple_door": "Maple Door",
   "block.treemendous.maple_fence": "Maple Fence",
@@ -296,6 +336,8 @@
   "block.treemendous.stripped_ash_wood": "Stripped Ash Wood",
   "block.treemendous.stripped_beech_log": "Stripped Beech Log",
   "block.treemendous.stripped_beech_wood": "Stripped Beech Wood",
+  "block.treemendous.stripped_cedar_log": "Stripped Cedar Log",
+  "block.treemendous.stripped_cedar_wood": "Stripped Cedar Wood",
   "block.treemendous.stripped_cherry_log": "Stripped Cherry Log",
   "block.treemendous.stripped_cherry_wood": "Stripped Cherry Wood",
   "block.treemendous.stripped_chestnut_log": "Stripped Chestnut Log",
@@ -310,6 +352,8 @@
   "block.treemendous.stripped_larch_wood": "Stripped Larch Wood",
   "block.treemendous.stripped_linden_log": "Stripped Linden Log",
   "block.treemendous.stripped_linden_wood": "Stripped Linden Wood",
+  "block.treemendous.stripped_magnolia_log": "Stripped Magnolia Log",
+  "block.treemendous.stripped_magnolia_wood": "Stripped Magnolia Wood",
   "block.treemendous.stripped_maple_log": "Stripped Maple Log",
   "block.treemendous.stripped_maple_wood": "Stripped Maple Wood",
   "block.treemendous.stripped_pine_log": "Stripped Pine Log",
@@ -320,8 +364,24 @@
   "block.treemendous.stripped_pomegranate_wood": "Stripped Pomegranate Wood",
   "block.treemendous.stripped_robinia_log": "Stripped Robinia Log",
   "block.treemendous.stripped_robinia_wood": "Stripped Robinia Wood",
+  "block.treemendous.stripped_walnut_log": "Stripped Walnut Log",
+  "block.treemendous.stripped_walnut_wood": "Stripped Walnut Wood",
   "block.treemendous.stripped_willow_log": "Stripped Willow Log",
   "block.treemendous.stripped_willow_wood": "Stripped Willow Wood",
+  "block.treemendous.walnut_button": "Walnut Button",
+  "block.treemendous.walnut_door": "Walnut Door",
+  "block.treemendous.walnut_fence": "Walnut Fence",
+  "block.treemendous.walnut_fence_gate": "Walnut Fence Gate",
+  "block.treemendous.walnut_leaves": "Walnut Leaves",
+  "block.treemendous.walnut_log": "Walnut Log",
+  "block.treemendous.walnut_planks": "Walnut Planks",
+  "block.treemendous.walnut_pressure_plate": "Walnut Pressure Plate",
+  "block.treemendous.walnut_sapling": "Walnut Sapling",
+  "block.treemendous.walnut_sign": "Walnut Sign",
+  "block.treemendous.walnut_slab": "Walnut Slab",
+  "block.treemendous.walnut_stairs": "Walnut Stairs",
+  "block.treemendous.walnut_trapdoor": "Walnut Trapdoor",
+  "block.treemendous.walnut_wood": "Walnut Wood",
   "block.treemendous.willow_button": "Willow Button",
   "block.treemendous.willow_door": "Willow Door",
   "block.treemendous.willow_fence": "Willow Fence",
@@ -340,6 +400,7 @@
   "item.treemendous.alder_boat": "Alder Boat",
   "item.treemendous.ash_boat": "Ash Boat",
   "item.treemendous.beech_boat": "Beech Boat",
+  "item.treemendous.cedar_boat": "Cedar Boat",
   "item.treemendous.cherry_boat": "Cherry Boat",
   "item.treemendous.chestnut_boat": "Chestnut Boat",
   "item.treemendous.diamond_lumber_axe": "Diamond Lumberaxe",
@@ -350,11 +411,14 @@
   "item.treemendous.japanese_boat": "Japanese Maple Boat",
   "item.treemendous.larch_boat": "Larch Boat",
   "item.treemendous.linden_boat": "Linden Boat",
+  "item.treemendous.magnolia_boat": "Magnolia Boat",
   "item.treemendous.maple_boat": "Maple Boat",
   "item.treemendous.netherite_lumber_axe": "Netherite Lumberaxe",
   "item.treemendous.pine_boat": "Pine Boat",
   "item.treemendous.plane_boat": "Plane Boat",
+  "item.treemendous.pomegranate": "Pomegranate",
   "item.treemendous.pomegranate_boat": "Pomegranate Boat",
   "item.treemendous.robinia_boat": "Robinia Boat",
+  "item.treemendous.walnut_boat": "Walnut Boat",
   "item.treemendous.willow_boat": "Willow Boat"
 }
